--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>speech</title>
+        <title>AuraTalk</title>
         <link href="style.css" rel="stylesheet"/>
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -15,13 +15,13 @@
     <body>
     <div class="header-section">
         <div class="content">
-            <img src="logo.png" width="100" />
+            <img src="logo_new.png" width="100" />
         </div>
     </div>
     <div id="app"></div>
     <div class="footer">
         <div class="content">
-            built by <a href="https://twitter.com/huytd189">IITJ</a>, open sourced at <a target="_blank" href="https://github.com/huytd/speech">github</a>
+            built by <a href="https://github.com/viveksapkal2793">IITJ</a>, open sourced at <a target="_blank" href="https://github.com/viveksapkal2793/AuraTalk">github</a>
         </div>
     </div>
     <script type="module" src="./index.js"></script>
